# icpSparse

./: .gitignore  CMakeLists.txt  README.md  icpSparseDemo.h  main.cpp
experiments/: README.md  algoTest.py
ext/OptionParser/: option_parser.h
lib/IcpOptimizer/: CMakeLists.txt  IcpOptimizer.cpp  IcpOptimizer.h
lib/ObjLoader/: CMakeLists.txt  ObjLoader.cpp  ObjLoader.h
